# CityMonitoringHCS

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run.sh
.github/workflows/: pr-ruff.yml
src/citymonitoringhcs/: __init__.py
src/nlp_service/: Dockerfile  README.md  pyproject.toml
src/nlp_service/app/: logger.py  main.py
src/nlp_service/app/api/: geocoder.py  logger.py  processing.py
src/parser_service/: Dockerfile  README.md  pyproject.toml
src/parser_service/app/: main.py
src/parser_service/app/api/: dependencies.py  logger.py  models.py  scheme.py  tg_parser.py  web_parser.py
src/parser_service/app/templates/: message.html  message_list.html
src/postgres/: init.sql
src/supervisor/: Dockerfile  README.md  pyproject.toml
src/supervisor/app/: main.py
src/supervisor/app/api/: database.py  dependencies.py  filters.py  geocoder.py  logger.py  models.py  scheme.py
src/supervisor/app/routers/: map.py  messages.py  processing.py
src/supervisor/app/static/: script.js  style.css
src/supervisor/app/templates/: map.html  message.html  message_list.html
