[project]
name = "citymonitoringhcs"
version = "0.1.0"
description = "City Monitoring of Housing and Communal Systems"
authors = [
    { name = "ivnstd", email = "nasty-iv@bk.ru" }
]
dependencies = [
    "fastapi>=0.109.2",
    "pydantic>=2.6.1",
    "uvicorn>=0.27.0",
    "ruff>=0.1.14",
    "pyrogram>=2.0.106",
    "tgcrypto>=1.2.5",
    "uvloop>=0.19.0",
    "sqlalchemy>=2.0.25",
    "python-dotenv>=1.0.1",
    "psycopg2-binary>=2.9.9",
    "jinja2>=3.1.3",
    "pip>=24.0",
    "ipdb>=0.13.13",
    "beautifulsoup4>=4.12.3",
    "httpx>=0.26.0",
    "py_mini_racer>=0.6.0",
    "natasha>=1.6.0",
    "pymorphy2>=0.9.1",
    "setuptools>=69.1.0",
]
readme = "README.md"
requires-python = ">=3.10, <3.11"

[project.scripts]
hello = "citymonitoringhcs:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/supervisor", "src/nlp_service", "src/parser_service"]
